--- a/index.html
+++ b/index.html
@@ -241,16 +241,30 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">UrbanIng-V2X: A Large-Scale Multi-Vehicle,
+Multi-Infrastructure Dataset Across Multiple
+Intersections for Cooperative Perception</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+<span class="author-block">
+  <a href="#" target="_blank">Karthikeyan Chandra Sekaran</a><sup>*</sup>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Markus Geisler</a><sup>*</sup>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Dominik Rößle</a><sup>*</sup>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Adithya Mohan</a>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Daniel Cremers</a>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Wolfgang Utschick</a>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Michael Botsch</a>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Werner Huber</a>,</span>
+<span class="author-block">
+  <a href="#" target="_blank">Torsten Schön</a>
+</span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
