--- a/index.html
+++ b/index.html
@@ -247,31 +247,33 @@ Intersections for Cooperative Perception</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
 <span class="author-block">
-  <a href="#" target="_blank">Karthikeyan Chandra Sekaran</a><sup>*</sup>,</span>
+  <a href="#" target="_blank">Karthikeyan Chandra Sekaran</a><sup>1*</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Markus Geisler</a><sup>*</sup>,</span>
+  <a href="#" target="_blank">Markus Geisler</a><sup>1*</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Dominik Rößle</a><sup>*</sup>,</span>
+  <a href="#" target="_blank">Dominik Rößle</a><sup>1*</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Adithya Mohan</a>,</span>
+  <a href="#" target="_blank">Adithya Mohan</a><sup>1</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Daniel Cremers</a>,</span>
+  <a href="#" target="_blank">Daniel Cremers</a><sup>2</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Wolfgang Utschick</a>,</span>
+  <a href="#" target="_blank">Wolfgang Utschick</a><sup>2</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Michael Botsch</a>,</span>
+  <a href="#" target="_blank">Michael Botsch</a><sup>1</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Werner Huber</a>,</span>
+  <a href="#" target="_blank">Werner Huber</a><sup>1</sup>,</span>
 <span class="author-block">
-  <a href="#" target="_blank">Torsten Schön</a>
+  <a href="#" target="_blank">Torsten Schön</a><sup>1</sup>
 </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
+                    <span class="author-block">Technische Hochschule Ingolstadt<br>NeurIPS 2025</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical order.</small></span>
+                    <span class="eql-cntrb"><small><br><sup>1</sup>Technische Hochschule Ingolstadt</small></span>
+                    <span class="eql-cntrb"><small><br><sup>1</sup>Technical University of Munich</small></span>
                   </div>
 
                   <div class="column has-text-centered">
