--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ Intersections for Cooperative Perception</h1>
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Technische Hochschule Ingolstadt<br>NeurIPS 2025</span>
+                    <span class="author-block"><br>NeurIPS 2025</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical order.</small></span>
                     <span class="eql-cntrb"><small><br><sup>1</sup>Technische Hochschule Ingolstadt</small></span>
-                    <span class="eql-cntrb"><small><br><sup>1</sup>Technical University of Munich</small></span>
+                    <span class="eql-cntrb"><small><br><sup>2</sup>Technical University of Munich</small></span>
                   </div>
 
                   <div class="column has-text-centered">
