--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ Intersections for Cooperative Perception</h1>
       <!-- TODO: Replace with your video description -->
       <!-- <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
+      </h2> -->
     </div>
-  </div> -->
+  </div>
 </section>
 <!-- End teaser video -->
 
