--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@ Intersections for Cooperative Perception</h1>
   </iframe>
 </div>
       <!-- TODO: Replace with your video description -->
-      <!-- <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2> -->
+      </h2>
     </div>
   </div>
 </section>
