--- a/index.html
+++ b/index.html
@@ -390,145 +390,114 @@ via https://github.com/thi-ad/UrbanIng-V2X.
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- TODO: Replace with your research result images -->
-        <img src="static/images/carousel1.jpg" alt="First research result visualization" loading="lazy"/>
-        <!-- TODO: Replace with description of this result -->
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="Second research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="Third research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="Fourth research result visualization" loading="lazy"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
+<!-- ========================= -->
+<!-- UrbanIng-V2X Dataset Info -->
+<!-- ========================= -->
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">At a Glance</h2>
+    <div class="content has-text-justified">
+      <p>
+        <b>UrbanIng-V2X</b> is a large-scale <b>cooperative perception dataset</b> captured at three intelligent urban intersections in Ingolstadt, Germany. 
+        It enables research in <i>multi-vehicle perception</i>, <i>vehicle-to-infrastructure (V2I)</i>, and <i>vehicle-to-vehicle (V2V)</i> communication.
+      </p>
+      <ul>
+        <li><b>Scenarios:</b> 34 coordinated sequences (~20 s each)</li>
+        <li><b>Objects:</b> ~712k 3D annotated bounding boxes</li>
+        <li><b>Object classes:</b> 13</li>
+        <li><b>Annotation rate:</b> 10 Hz</li>
+        <li><b>License:</b> CC BY-NC-ND 4.0 (non-commercial academic use)</li>
+      </ul>
     </div>
+
+    <figure class="image is-16by9">
+      <iframe src="static/pdfs/TitlePicture.pdf" width="100%" height="550"></iframe>
+      <figcaption class="has-text-centered">
+        Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 12 LiDARs, 17 thermal cameras, 12 RGB cameras.
+      </figcaption>
+    </figure>
   </div>
-</div>
-</div>
 </section>
-<!-- End image carousel -->
 
-
-
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- TODO: Replace with your YouTube video ID -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Dataset Composition</h2>
+    <div class="content has-text-justified">
+      <p>
+        UrbanIng-V2X provides a synchronized and spatially calibrated multi-modal dataset with contributions from both mobile and fixed sensing nodes:
+      </p>
+      <ul>
+        <li><b>Vehicles (2):</b> Each equipped with 6 RGB cameras, 1 360° LiDAR, and 1 ADMA GNSS/IMU sensor.</li>
+        <li><b>Infrastructure (up to 3 poles per intersection):</b> Each pole includes 4 LiDAR and multiple thermal cameras for 360° coverage.</li>
+        <li><b>Collected environments:</b> Three distinct intersection layouts in Ingolstadt.</li>
+        <li><b>Applications:</b> Cooperative object detection, tracking, trajectory prediction, and fusion evaluation.</li>
+      </ul>
     </div>
   </div>
 </section>
-<!-- End youtube video -->
 
-
-<!-- Video carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video1" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video2" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video3" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Calibration Overview</h2>
+    <div class="content has-text-justified">
+      <p>
+        Each sensor within UrbanIng-V2X is temporally synchronized and spatially calibrated. 
+        Calibration covers <b>LiDAR-to-camera</b>, <b>LiDAR-to-GNSS/IMU</b>, and <b>infrastructure alignment</b>. 
+        The provided calibration files allow reconstruction of precise spatial relationships for fusion or cooperative perception tasks.
+      </p>
     </div>
+
+    <figure class="image is-16by9">
+      <iframe src="static/pdfs/calibration_fused_3.pdf" width="100%" height="550"></iframe>
+      <figcaption class="has-text-centered">
+        Temporal and spatial calibration overview for vehicle and infrastructure sensors.
+      </figcaption>
+    </figure>
   </div>
 </section>
-<!-- End video carousel -->
 
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <!-- TODO: Replace with your poster PDF -->
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Coordinate System</h2>
+    <div class="content has-text-justified">
+      <p>
+        All data are expressed in a unified global coordinate system (GC) anchored to the ADMA GNSS/IMU reference frame. 
+        Each vehicle’s local frame (x-forward, y-left, z-up) is registered to this global coordinate. 
+        Infrastructure LiDARs and cameras are similarly aligned using surveyed extrinsics for interoperability.
+      </p>
     </div>
-  </section>
-<!--End paper poster -->
 
+    <figure class="image is-16by9">
+      <iframe src="static/pdfs/coordinate_fused_v2.pdf" width="100%" height="550"></iframe>
+      <figcaption class="has-text-centered">
+        Coordinate system alignment between vehicles, LiDARs, and infrastructure units.
+      </figcaption>
+    </figure>
+  </div>
+</section>
 
-
-<!--BibTex citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <div class="bibtex-header">
-        <h2 class="title">BibTeX</h2>
-        <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
-          <i class="fas fa-copy"></i>
-          <span class="copy-text">Copy</span>
-        </button>
-      </div>
-      <pre id="bibtex-code"><code>@article{YourPaperKey2024,
-  title={Your Paper Title Here},
-  author={First Author and Second Author and Third Author},
-  journal={Conference/Journal Name},
-  year={2024},
-  url={https://your-domain.com/your-project-page}
+<!-- BibTeX citation -->
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <div class="bibtex-header">
+      <h2 class="title">Citation</h2>
+      <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
+        <i class="fas fa-copy"></i>
+        <span class="copy-text">Copy</span>
+      </button>
+    </div>
+    <pre id="bibtex-code"><code>@misc{urbaningv2x2025,
+  title={UrbanIng-V2X: A Large-Scale Multi-Vehicle, Multi-Infrastructure Dataset Across Multiple Intersections for Cooperative Perception},
+  author={Karthikeyan Chandra Sekaran and Markus Geisler and Dominik Rößle and Adithya Mohan and Daniel Cremers and Wolfgang Utschick and Michael Botsch and Werner Huber and Torsten Schön},
+  year={2025},
+  eprint={2510.23478},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  url={https://arxiv.org/abs/2510.23478}
 }</code></pre>
-    </div>
+  </div>
 </section>
-<!--End BibTex citation -->
 
 
   <footer class="footer">
