--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/TitlePicture.pdf" width="100%" height="550"></iframe>
+      <embed src="static/images/TitlePicture.pdf" width="100%" height="550"></embed>
       <figcaption class="has-text-centered">
         Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 12 LiDARs, 17 thermal cameras, 12 RGB cameras.
       </figcaption>
@@ -449,7 +449,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/calibration_fused_3.pdf" width="100%" height="550"></iframe>
+      <embed src="static/images/calibration_fused_3.pdf" width="100%" height="550"></embed>
       <figcaption class="has-text-centered">
         Temporal and spatial calibration overview for vehicle and infrastructure sensors.
       </figcaption>
@@ -469,7 +469,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/coordinate_fused_v2.pdf" width="100%" height="550"></iframe>
+      <embed src="static/images/coordinate_fused_v2.pdf" width="100%" height="550"></embed>
       <figcaption class="has-text-centered">
         Coordinate system alignment between vehicles, LiDARs, and infrastructure units.
       </figcaption>
