--- a/index.html
+++ b/index.html
@@ -389,7 +389,6 @@ via https://github.com/thi-ad/UrbanIng-V2X.
 </section>
 <!-- End paper abstract -->
 
-
 <!-- ========================= -->
 <!-- UrbanIng-V2X Dataset Info -->
 <!-- ========================= -->
@@ -412,7 +411,8 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/TitlePicture.png" width="100%" height="550"></iframe>
+      <img src="static/images/TitlePicture.png" alt="UrbanIng-V2X Overview"
+           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
       <figcaption class="has-text-centered">
         Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 12 LiDARs, 17 thermal cameras, 12 RGB cameras.
       </figcaption>
@@ -449,7 +449,8 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/calibration_fused_3.png" width="100%" height="550"></iframe>
+      <img src="static/images/calibration_fused_3.png" alt="Calibration overview"
+           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
       <figcaption class="has-text-centered">
         Temporal and spatial calibration overview for vehicle and infrastructure sensors.
       </figcaption>
@@ -469,7 +470,8 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <iframe src="static/images/coordinate_fused_v2.png" width="100%" height="550"></iframe>
+      <img src="static/images/coordinate_fused_v2.png" alt="Coordinate system alignment"
+           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
       <figcaption class="has-text-centered">
         Coordinate system alignment between vehicles, LiDARs, and infrastructure units.
       </figcaption>
@@ -498,6 +500,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
 }</code></pre>
   </div>
 </section>
+
 
 
   <footer class="footer">
