--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image is-16by9">
-      <img src="static/images/coordinate_fused_v2.png" alt="Coordinate system alignment"
+      <img src="static/images/1.png" alt="Coordinate system alignment"
            loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
       <figcaption class="has-text-centered">
         Coordinate system alignment between vehicles, LiDARs, and infrastructure units.
