--- a/index.html
+++ b/index.html
@@ -501,6 +501,49 @@ via https://github.com/thi-ad/UrbanIng-V2X.
   </div>
 </section>
 
+<!-- ========================= -->
+<!-- Partner and Institute Logos -->
+<!-- ========================= -->
+<section class="section hero is-light">
+  <div class="container has-text-centered">
+    <h2 class="title is-4">In Collaboration With</h2>
+    <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1rem;">
+      
+      <div class="column is-narrow">
+        <figure class="image is-128x128" style="margin:auto;">
+          <img src="static/images/aimotion_logo.png" alt="AI-Motion Bavaria" style="max-height:90px; object-fit:contain;">
+        </figure>
+      </div>
+
+      <div class="column is-narrow">
+        <figure class="image is-128x128" style="margin:auto;">
+          <img src="static/images/carissma_logo.png" alt="CARISSMA Research Center" style="max-height:90px; object-fit:contain;">
+        </figure>
+      </div>
+
+      <div class="column is-narrow">
+        <figure class="image is-128x128" style="margin:auto;">
+          <img src="static/images/cvims_logo.png" alt="CVIMS Research Group" style="max-height:90px; object-fit:contain;">
+        </figure>
+      </div>
+
+      <div class="column is-narrow">
+        <figure class="image is-128x128" style="margin:auto;">
+          <img src="static/images/thi_logo.png" alt="Technische Hochschule Ingolstadt" style="max-height:90px; object-fit:contain;">
+        </figure>
+      </div>
+
+      <div class="column is-narrow">
+        <figure class="image is-128x128" style="margin:auto;">
+          <img src="static/images/tum_logo.png" alt="Technical University of Munich" style="max-height:90px; object-fit:contain;">
+        </figure>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
 
 
   <footer class="footer">
