add video description

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Intersections for Cooperative Perception</h1>
 </div>
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        
+        A visual overview of UrbanIng-V2X, showcasing synchronized multi-view perception across vehicles and infrastructure. Each frame illustrates 3D bounding-box annotations from cameras and LiDAR sensors, highlighting cooperative perception and object tracking at complex urban intersections in Ingolstadt, Germany.
       </h2>
     </div>
   </div>
