change background color

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
     <i class="fas fa-chevron-up"></i>
   </button>
 
-
   <main id="main-content">
   <section class="hero">
     <div class="hero-body">
@@ -220,10 +219,19 @@ Intersections for Cooperative Perception</h1>
 </span>
                   </div>
 
+                  <div class="is-size-5 publication-authors">
+                    <!-- TODO: Replace with your institution and conference/journal info -->
+                    <span class="author-block">Technische Hochschule Ingolstadt and Technical University of Munich<br>NeurIPS 2025</span>
+                    <!-- TODO: Remove this line if no equal contribution -->
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical order.</small></span>
+                    <span class="eql-cntrb"><small><br><sup>1</sup>Technische Hochschule Ingolstadt</small></span>
+                    <span class="eql-cntrb"><small><br><sup>2</sup>Technical University of Munich</small></span>
+                  </div>
+
 <!-- ========================= -->
 <!-- Partner and Institute Logos -->
 <!-- ========================= -->
-<section class="section hero is-light">
+<section class="section" style="background-color: white;">
   <div class="container has-text-centered">
     <h2 class="title is-4">In Collaboration With</h2>
     <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1rem;">
@@ -261,15 +269,6 @@ Intersections for Cooperative Perception</h1>
     </div>
   </div>
 </section>
-
-                  <div class="is-size-5 publication-authors">
-                    <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Technische Hochschule Ingolstadt and Technical University of Munich<br>NeurIPS 2025</span>
-                    <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical order.</small></span>
-                    <span class="eql-cntrb"><small><br><sup>1</sup>Technische Hochschule Ingolstadt</small></span>
-                    <span class="eql-cntrb"><small><br><sup>2</sup>Technical University of Munich</small></span>
-                  </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -500,51 +499,6 @@ via https://github.com/thi-ad/UrbanIng-V2X.
 }</code></pre>
   </div>
 </section>
-
-<!-- ========================= -->
-<!-- Partner and Institute Logos -->
-<!-- ========================= -->
-<section class="section hero is-light">
-  <div class="container has-text-centered">
-    <h2 class="title is-4">In Collaboration With</h2>
-    <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1rem;">
-      
-      <div class="column is-narrow">
-        <figure class="image is-128x128" style="margin:auto;">
-          <img src="static/images/aimotion_logo.png" alt="AI-Motion Bavaria" style="max-height:90px; object-fit:contain;">
-        </figure>
-      </div>
-
-      <div class="column is-narrow">
-        <figure class="image is-128x128" style="margin:auto;">
-          <img src="static/images/carissma_logo.png" alt="CARISSMA Research Center" style="max-height:90px; object-fit:contain;">
-        </figure>
-      </div>
-
-      <div class="column is-narrow">
-        <figure class="image is-128x128" style="margin:auto;">
-          <img src="static/images/cvims_logo.png" alt="CVIMS Research Group" style="max-height:90px; object-fit:contain;">
-        </figure>
-      </div>
-
-      <div class="column is-narrow">
-        <figure class="image is-128x128" style="margin:auto;">
-          <img src="static/images/thi_logo.png" alt="Technische Hochschule Ingolstadt" style="max-height:90px; object-fit:contain;">
-        </figure>
-      </div>
-
-      <div class="column is-narrow">
-        <figure class="image is-128x128" style="margin:auto;">
-          <img src="static/images/tum_logo.png" alt="Technical University of Munich" style="max-height:90px; object-fit:contain;">
-        </figure>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-
-
 
   <footer class="footer">
   <div class="container">
