--- a/index.html
+++ b/index.html
@@ -196,36 +196,46 @@
             <h1 class="title is-1 publication-title">UrbanIng-V2X: A Large-Scale Multi-Vehicle,
 Multi-Infrastructure Dataset Across Multiple
 Intersections for Cooperative Perception</h1>
-            <div class="is-size-5 publication-authors">
-              <!-- TODO: Replace with your paper authors and their personal links -->
-<span class="author-block">
-  <a href="#" target="_blank">Karthikeyan Chandra Sekaran</a><sup>1*</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Markus Geisler</a><sup>1*</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Dominik Rößle</a><sup>1*</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Adithya Mohan</a><sup>1</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Daniel Cremers</a><sup>2</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Wolfgang Utschick</a><sup>2</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Michael Botsch</a><sup>1</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Werner Huber</a><sup>1</sup>,</span>
-<span class="author-block">
-  <a href="#" target="_blank">Torsten Schön</a><sup>1</sup>
-</span>
-                  </div>
+
+<div class="is-size-5 publication-authors" style="line-height: 1.6; text-align: center;">
+  <span class="author-block">
+    <a href="#" target="_blank">Karthikeyan Chandra Sekaran</a><sup>1*</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Markus Geisler</a><sup>1*</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Dominik Rößle</a><sup>1*</sup>
+  </span>
+  <br>
+  <span class="author-block">
+    <a href="#" target="_blank">Adithya Mohan</a><sup>1</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Daniel Cremers</a><sup>2</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Wolfgang Utschick</a><sup>2</sup>
+  </span>
+  <br>
+  <span class="author-block">
+    <a href="#" target="_blank">Michael Botsch</a><sup>1</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Werner Huber</a><sup>1</sup>,</span>
+  <span class="author-block">
+    <a href="#" target="_blank">Torsten Schön</a><sup>1</sup>
+  </span>
+</div>
+
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Technische Hochschule Ingolstadt and Technical University of Munich<br>NeurIPS 2025</span>
+                    <span class="author-block"><br>NeurIPS 2025</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical order.</small></span>
-                    <span class="eql-cntrb"><small><br><sup>1</sup>Technische Hochschule Ingolstadt</small></span>
-                    <span class="eql-cntrb"><small><br><sup>2</sup>Technical University of Munich</small></span>
+                    <span class="eql-cntrb" style="display:block; font-size:1.05rem; font-weight:600; color:#000000; margin-top:0.3rem;">
+                      <sup>1</sup>Technische Hochschule Ingolstadt
+                    </span>
+                    <span class="eql-cntrb" style="display:block; font-size:1.05rem; font-weight:600; color:#000000; margin-top:0.2rem;">
+                      <sup>2</sup>Technical University of Munich
+                    </span>
+
                   </div>
 
 <!-- ========================= -->
