--- a/index.html
+++ b/index.html
@@ -419,10 +419,12 @@ via https://github.com/thi-ad/UrbanIng-V2X.
       </ul>
     </div>
 
-    <figure class="image is-16by9">
-      <img src="static/images/TitlePicture.png" alt="UrbanIng-V2X Overview"
-           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
-      <figcaption class="has-text-centered">
+    <figure class="image" style="text-align:center; margin-bottom:2rem;">
+      <img src="static/images/TitlePicture.png" 
+          alt="UrbanIng-V2X Overview"
+          loading="lazy"
+          style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
+      <figcaption class="has-text-centered" style="margin-top:0.5rem;">
         Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 12 LiDARs, 17 thermal cameras, 12 RGB cameras.
       </figcaption>
     </figure>
@@ -457,10 +459,12 @@ via https://github.com/thi-ad/UrbanIng-V2X.
       </p>
     </div>
 
-    <figure class="image is-16by9">
-      <img src="static/images/calibration_fused_3.png" alt="Calibration overview"
-           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
-      <figcaption class="has-text-centered">
+    <figure class="image" style="text-align:center; margin-bottom:2rem;">
+      <img src="static/images/calibration_fused_3.png" 
+          alt="Calibration overview"
+          loading="lazy"
+          style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
+      <figcaption class="has-text-centered" style="margin-top:0.5rem;">
         Temporal and spatial calibration overview for vehicle and infrastructure sensors.
       </figcaption>
     </figure>
@@ -478,10 +482,12 @@ via https://github.com/thi-ad/UrbanIng-V2X.
       </p>
     </div>
 
-    <figure class="image is-16by9">
-      <img src="static/images/2.png" alt="Coordinate system alignment"
-           loading="lazy" style="width:100%;border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
-      <figcaption class="has-text-centered">
+    <figure class="image" style="text-align:center; margin-bottom:2rem;">
+      <img src="static/images/2.png" 
+          alt="Coordinate system alignment"
+          loading="lazy"
+          style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
+      <figcaption class="has-text-centered" style="margin-top:0.5rem;">
         Coordinate system alignment between vehicles, LiDARs, and infrastructure units.
       </figcaption>
     </figure>
