--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ via https://github.com/thi-ad/UrbanIng-V2X.
     </div>
 
     <figure class="image" style="text-align:center; margin-bottom:2rem;">
-      <img src="static/images/2.png" 
+      <img src="static/images/coordinate_fused_v2.png" 
           alt="Coordinate system alignment"
           loading="lazy"
           style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
