add data privacy

--- a/index.html
+++ b/index.html
@@ -516,6 +516,16 @@ via https://github.com/thi-ad/UrbanIng-V2X.
   </div>
 </section>
 
+<div class="has-text-centered" style="margin-top:1.5rem;">
+  <a href="https://www.thi.de/forschung/aimotion/datarecording/" 
+     target="_blank" 
+     rel="noopener noreferrer" 
+     style="color:#1a73e8; text-decoration:none; font-weight:500;">
+     🔒 Data Privacy Policy (THI)
+  </a>
+</div>
+
+
   <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
