increase size of buttons

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Intersections for Cooperative Perception</h1>
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
                     <a href="https://github.com/thi-ad/UrbanIng-V2X/tree/main" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                    class="external-link button is-medium is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -318,7 +318,7 @@ Intersections for Cooperative Perception</h1>
                 <!-- TODO: Update with your arXiv paper ID -->
                 <span class="link-block">
                   <a href="https://www.arxiv.org/pdf/2510.23478" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
+                  class="external-link button is-medium is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
