--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Intersections for Cooperative Perception</h1>
   <span class="author-block">
     <a href="#" target="_blank">Markus Geisler</a><sup>1*</sup>,</span>
   <span class="author-block">
-    <a href="#" target="_blank">Dominik Rößle,</a><sup>1*</sup>
+    <a href="#" target="_blank">Dominik Rößle</a><sup>1*</sup>
   </span>
   <br>
   <span class="author-block">
@@ -211,7 +211,7 @@ Intersections for Cooperative Perception</h1>
   <span class="author-block">
     <a href="#" target="_blank">Daniel Cremers</a><sup>2</sup>,</span>
   <span class="author-block">
-    <a href="#" target="_blank">Wolfgang Utschick,</a><sup>2</sup>
+    <a href="#" target="_blank">Wolfgang Utschick</a><sup>2</sup>
   </span>
   <br>
   <span class="author-block">
