--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                     <div class="column is-narrow">
                       <figure class="image is-128x128" style="margin:auto;">
-                        <img src="static/images/aimotion_logo.png" alt="AI-Motion Bavaria"
+                        <img src="static/images/aimotion.png" alt="AI-Motion Bavaria"
                           style="max-height:90px; object-fit:contain;">
                       </figure>
                     </div>
@@ -284,7 +284,7 @@
 
                     <div class="column is-narrow">
                       <figure class="image is-128x128" style="margin:auto;">
-                        <img src="static/images/tum_logo.png" alt="Technical University of Munich"
+                        <img src="static/images/tum.png" alt="Technical University of Munich"
                           style="max-height:90px; object-fit:contain;">
                       </figure>
                     </div>
