--- a/index.html
+++ b/index.html
@@ -252,40 +252,45 @@
               <section class="section" style="background-color: white;">
                 <div class="container has-text-centered">
                   <h2 class="title is-4">In Collaboration With</h2>
-                  <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1rem;">
+                  <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1.5rem;">
 
-                    <div class="column is-narrow">
-                      <figure class="image is-128x128" style="margin:auto;">
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/aimotion.png" alt="AI-Motion Bavaria"
-                          style="max-height:90px; object-fit:contain;">
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
                     </div>
 
-                    <div class="column is-narrow">
-                      <figure class="image is-128x128" style="margin:auto;">
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/carissma_logo.png" alt="CARISSMA Research Center"
-                          style="max-height:90px; object-fit:contain;">
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
                     </div>
 
-                    <div class="column is-narrow">
-                      <figure class="image is-128x128" style="margin:auto;">
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/cvims_logo.png" alt="CVIMS Research Group"
-                          style="max-height:90px; object-fit:contain;">
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
                     </div>
 
-                    <div class="column is-narrow">
-                      <figure class="image is-128x128" style="margin:auto;">
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/thi_logo.png" alt="Technische Hochschule Ingolstadt"
-                          style="max-height:90px; object-fit:contain;">
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
                     </div>
 
-                    <div class="column is-narrow">
-                      <figure class="image is-128x128" style="margin:auto;">
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/tum.png" alt="Technical University of Munich"
-                          style="max-height:90px; object-fit:contain;">
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
                     </div>
 
