--- a/index.html
+++ b/index.html
@@ -254,14 +254,16 @@
                   <h2 class="title is-4">In Collaboration With</h2>
                   <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1.5rem;">
 
+                    <!-- AIMotion Bavaria (slightly larger) -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
-                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
+                        style="width: 170px; height: 110px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/aimotion.png" alt="AI-Motion Bavaria"
-                          style="max-height:80px; max-width:130px; object-fit:contain;">
+                          style="max-height:95px; max-width:150px; object-fit:contain;">
                       </figure>
                     </div>
 
+                    <!-- CARISSMA -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
                         style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
@@ -270,6 +272,7 @@
                       </figure>
                     </div>
 
+                    <!-- CVIMS -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
                         style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
@@ -278,6 +281,7 @@
                       </figure>
                     </div>
 
+                    <!-- THI -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
                         style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
@@ -286,6 +290,7 @@
                       </figure>
                     </div>
 
+                    <!-- TUM -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
                         style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
@@ -297,6 +302,7 @@
                   </div>
                 </div>
               </section>
+
 
               <div class="column has-text-centered">
                 <div class="publication-links">
