--- a/index.html
+++ b/index.html
@@ -233,16 +233,22 @@
                 <!-- TODO: Replace with your institution and conference/journal info -->
                 <span class="author-block"><br>NeurIPS 2025</span>
                 <!-- TODO: Remove this line if no equal contribution -->
-                <span class="eql-cntrb"><small><br><sup>*</sup>Equal contribution. Authors listed in alphabetical
-                    order.</small></span>
+                <!-- Equal contribution and affiliations -->
+                <span class="eql-cntrb"
+                  style="display:block; font-size:1.05rem; font-weight:600; color:#000000; margin-top:0.3rem;">
+                  <sup>*</sup>Equal contribution. Authors listed in alphabetical order.
+                </span>
+
                 <span class="eql-cntrb"
                   style="display:block; font-size:1.05rem; font-weight:600; color:#000000; margin-top:0.3rem;">
                   <sup>1</sup>Technische Hochschule Ingolstadt
                 </span>
+
                 <span class="eql-cntrb"
                   style="display:block; font-size:1.05rem; font-weight:600; color:#000000; margin-top:0.2rem;">
                   <sup>2</sup>Technical University of Munich
                 </span>
+
 
               </div>
 
@@ -456,7 +462,7 @@
           <img src="static/images/TitlePicture.png" alt="UrbanIng-V2X Overview" loading="lazy"
             style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
           <figcaption class="has-text-centered" style="margin-top:0.5rem;">
-            Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 12 LiDARs, 17 thermal
+            Overview of the UrbanIng-V2X setup: 2 vehicles, 3 infrastructure intersections, 14 LiDARs, 17 thermal
             cameras, 12 RGB cameras.
           </figcaption>
         </figure>
@@ -499,7 +505,7 @@
           <img src="static/images/calibration_fused_3.png" alt="Calibration overview" loading="lazy"
             style="max-width:100%; height:auto; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.25);" />
           <figcaption class="has-text-centered" style="margin-top:0.5rem;">
-            Temporal and spatial calibration overview for vehicle and infrastructure sensors.
+            Temporal synchronization and spatial calibration overview for vehicle and infrastructure sensors.
           </figcaption>
         </figure>
       </div>
