--- a/index.html
+++ b/index.html
@@ -305,6 +305,15 @@
                       </figure>
                     </div>
 
+                    <!-- HTA -->
+                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                      <figure class="image"
+                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
+                        <img src="static/images/hta.png" alt="Hightech Agenda Bayern"
+                          style="max-height:80px; max-width:130px; object-fit:contain;">
+                      </figure>
+                    </div>
+
                   </div>
                 </div>
               </section>
