--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
                     </div>
 
                     <!-- CVIMS -->
-                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+                    <!-- <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
                       <figure class="image"
                         style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
                         <img src="static/images/cvims_logo.png" alt="CVIMS Research Group"
                           style="max-height:80px; max-width:130px; object-fit:contain;">
                       </figure>
-                    </div>
+                    </div> -->
 
                     <!-- THI -->
                     <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
